[gd_scene load_steps=2 format=2]

[ext_resource path="res://HKUToelating.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 26.0
margin_top = 197.0
margin_right = 148.0
margin_bottom = 291.0
align = 3

[node name="Timer" type="Timer" parent="."]
wait_time = 8.4

[node name="StartTimer" type="Timer" parent="."]
wait_time = 35.0
one_shot = true
autostart = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 170.0
margin_top = 197.0
margin_right = 252.0
margin_bottom = 243.0

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 169.0
margin_top = 249.0
margin_right = 234.0
margin_bottom = 291.0

[connection signal="mouse_exited" from="LineEdit" to="." method="_on_LineEdit_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_Timer2_timeout"]
